[package]
name = "ripfs"
version = "0.1.0"
authors = ["toef"]

[dependencies]
#ipfsapi = "0.2"
#ipfsapi = { path = "../rust-ipfs-api", version = "0.2" }
ipfsapi = { git = "https://github.com/jcaesar/rust-ipfs-api", rev = "ae8d905708f35419faff0d94afdf4111ac5cb70b" }
clap = "2.26"
failure = "0.1"
humantime = "1.1.1"
pathdiff = "0.1.0"
